clang/test/BSC/Negative/Generic/InvalidTemplateParameters/do_not_crash7.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

a b c<`x`>();
// expected-error@-1 {{use of undeclared identifier 'x'}}
// expected-error@-2 {{expected identifier}}
// expected-error@-3 {{expected template parameter}}
// expected-error@-4 {{unknown type name 'b'}}
